@@ -4,9 +4,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>groupId</groupId>
+    <groupId>com.FileHelper</groupId>
     <artifactId>FileHelper</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.2</version>
+
+
     <build>
         <plugins>
             <plugin>
@@ -27,8 +29,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>8</source>
+                    <target>8</target>
+                    <compilerArgs>
+                        --enable-preview
+                    </compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
@@ -66,6 +71,12 @@
             <groupId>com.jcraft</groupId>
             <artifactId>jsch</artifactId>
             <version>0.1.55</version>
+        </dependency>
+
+        <dependency>
+            <groupId>br.com.Hasher</groupId>
+            <artifactId>Hasher</artifactId>
+            <version>1.0</version>
         </dependency>
 
     </dependencies>
